overflow fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -142,6 +142,7 @@ body {
   line-height: 2.3rem;
   padding-left: 2rem;
   transition: all 200ms ease;
+  overflow-y: hidden;
 }
 
 .activity-1:hover .activity-1-img {
@@ -321,6 +322,7 @@ body {
 
   .activity-title {
     font-size: 2rem;
+    overflow-y: hidden;
   }
 
   .activity-padding {
@@ -404,6 +406,7 @@ body {
 
   .activity-title {
     font-size: 2rem;
+    overflow-y: hidden;
   }
 
   .activity-padding {
